--- a/barrera-motoshop/src/Sass/_header.scss
+++ b/barrera-motoshop/src/Sass/_header.scss
@@ -1,25 +1,92 @@
-#header{
+/* -------- PHONE -------- */
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  #header {
     width: 100%;
-    height: 12rem;
-    background-color: #2F2F2F;
+    height: 10.5rem;
+    background-color: #313131;
+    display: flex;
+    justify-content: center;
+  }
+
+  .usuario {
+    position: absolute;
+    justify-content: flex-end;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 1px solid white;
+    border-radius: 50%;
+    left: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &:hover {
+      border: 1px solid #ce1d1f;
+      transition: all 0.2s ease-out;
+      box-shadow: inset 0px 0px 5px #cf001560;
     }
-.header-logo{
-    width: 25rem;
+    &:active {
+      background-color: #ce1d1f;
+    }
+  }
+  .usuario__svg {
+    width: 1.2rem;
+  }
+
+  .carrito {
+    position: absolute;
+    justify-content: flex-end;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 1px solid white;
+    border-radius: 50%;
+    right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+      border: 1px solid #ce1d1f;
+      transition: all 0.2s ease-out;
+      box-shadow: inset 0px 0px 5px #cf001560;
+    }
+    &:active {
+      background-color: #ce1d1f;
+    }
+  }
+
+  .carrito__svg {
+    width: 1.2rem;
+  }
+
+  .header__box{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 4rem;
+    top: 6.75rem;
+  }
 }
 
-.usuario-svg{
-    width: 1.5rem;
+/* -------- TABLET -------- */
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
 }
 
-.carrito-svg{
-    width: 1.5rem;
-}
+// DESKTOP ------------------------------------------------------------------
+@media screen and (min-width: 768px) {
+  #header {
+    width: 100%;
+    height: 15.1rem;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+  }
 
-
-.usuario{
+  .usuario {
     position: absolute;
     justify-content: flex-end;
     width: 3.5rem;
@@ -30,12 +97,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 4.25rem;
 
     &:hover {
-        border: 1px solid red;
+      border: 1px solid #ce1d1f;
+      transition: all 0.2s ease-out;
+      box-shadow: inset 0px 0px 5px #cf001560;
     }
-}
-.carrito{
+    &:active {
+      background-color: #ce1d1f;
+    }
+  }
+  .usuario__svg {
+    width: 1.5rem;
+  }
+
+  .carrito {
     position: absolute;
     justify-content: flex-end;
     width: 3.5rem;
@@ -46,8 +123,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 4.25rem;
 
     &:hover {
-        border: 1px solid red;
+      border: 1px solid #ce1d1f;
+      transition: all 0.2s ease-out;
+      box-shadow: inset 0px 0px 5px #cf001560;
     }
+    &:active {
+      background-color: #ce1d1f;
+    }
+  }
+
+  .carrito__svg {
+    width: 1.5rem;
+  }
 }
