--- a/barrera-motoshop/src/App.css
+++ b/barrera-motoshop/src/App.css
@@ -5,6 +5,121 @@
     font-family: 'Saira', sans-serif;
 }
 
+/*
+
+font-family: 'Anton', sans-serif;
+font-family: 'Saira', sans-serif;
+
+*/
+
+/*
+
+body:not(.bg-white):not(.crear-usuario):not(.crear-edificio) {
+    background: url("./assets/fondo.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+  
+*/
+
+/* document.body.classList.add('crear-usuario'); */
+
 html{
     background-color: whitesmoke;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: black !important;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: none;
+    border: 1px solid #CE1D1F;
+}
+
+.form-control.is-invalid:focus {
+    box-shadow: none;
+    border-color: none;
+}
+
+button {
+    border: none;
+}
+
+@media (max-width: 576px){
+
+}
+
+@media (min-width: 576px) and (max-width: 992px){
+
+}
+
+@media (min-width: 992px) and (max-width: 1200px){
+
+}
+
+@media (min-width: 1200px){
+
+}
+
+body.iniciar-sesion{
+    background-image: url("./assets/Fondo1.jpg");
+    /* filter: blur(0px); */
+    /* background-color: #ff000055; */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    background-position: center;
+    min-height: 100vh;  
+    width: 100vw;
+} 
+
+.bgLogin{
+    background-image: url("./assets/ConcreteIntenso.png");
+    background-color: #fc2226de;
+    opacity: 0.7;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    background-position: center;
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 0;
+}
+
+.bg{
+    opacity: 0.6;
+    background-color: rgb(255, 255, 255);
+    background-image: url("./assets/ConcreteIntenso.png");
+    background-blend-mode: multiply;
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: -1;
+    padding: 0;
+    margin:0;
 }
