--- a/barrera-motoshop/src/App.css
+++ b/barrera-motoshop/src/App.css
@@ -23,10 +23,6 @@ body:not(.bg-white):not(.crear-usuario):not(.crear-edificio) {
 
 /* document.body.classList.add('crear-usuario'); */
 
-html{
-    background-color: whitesmoke;
-}
-
 ::-webkit-scrollbar {
     width: 6px;
 }
@@ -83,38 +79,42 @@ button {
 }
 
 body.iniciar-sesion{
-    background-image: url("./assets/Fondo1.jpg");
+    background-color: rgb(0,0,0,1);
     /* filter: blur(0px); */
     /* background-color: #ff000055; */
     background-size: cover;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
     background-position: center;
+    background-attachment: fixed;
     min-height: 100vh;  
     width: 100vw;
 } 
 
 .bgLogin{
-    background-image: url("./assets/ConcreteIntenso.png");
-    background-color: #fc2226de;
-    opacity: 0.7;
+    background-color: rgb(0,0,0,0.4);
+    background-image: url("./assets/Fondo1.jpg");
+    filter: blur(3px);
+    opacity: 1;
     background-size: cover;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
     background-position: center;
+    background-attachment: fixed;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     z-index: 0;
 }
 
 .bg{
-    opacity: 0.6;
+    opacity: 1;
     background-color: rgb(255, 255, 255);
     background-image: url("./assets/ConcreteIntenso.png");
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
+    background-attachment: fixed;
     background-position: center;
     height: 100vh;
     width: 100vw;
