--- a/barrera-motoshop/src/Components/Footer/footer.css
+++ b/barrera-motoshop/src/Components/Footer/footer.css
@@ -25,6 +25,11 @@
 .logoFooter img{
     width: 100%;
     filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.8));
+    transition: all 0.3s ease;
+}
+
+.logoFooter img:hover{
+    transform: scale(1.04);
 }
 
 .infoFooter{
