--- a/barrera-motoshop/src/Components/TiraMarcas/tiraMarcas.css
+++ b/barrera-motoshop/src/Components/TiraMarcas/tiraMarcas.css
@@ -3,13 +3,9 @@
     padding-block: 2rem;
     display: flex;
     justify-content: space-evenly;
-    background-image: url("../../assets/ConcreteIntenso.png");
     background-color: rgb(81,146,192,1);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-blend-mode: multiply;
-    background-position: center;
-    background-attachment: fixed;
+    border-top: 1px solid rgb(58,58,58, 0.2);
+    border-bottom: 1px solid rgb(58,58,58, 0.2);
 }
 
 .MarcaDeTira{
