--- a/barrera-motoshop/src/Components/Footer/footer.css
+++ b/barrera-motoshop/src/Components/Footer/footer.css
@@ -1,3 +1,9 @@
+.footerContenedor{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .footer{
     width: 100%;
     background-image: url("../../assets/ConcreteIntenso.png");
@@ -86,4 +92,24 @@
 .contactoFooter i{
     color: rgb(206,29,31, 0.8);
     margin-right: 0.5rem;
+}
+
+.piePagina{
+    background-color: #E3E3E3;
+    width: 100%;
+    text-align: center;
+    padding-block: 1.5rem;
+    position: relative;
+}
+
+.piePagina span{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #3A3A3A;
+}
+
+.piePagina b{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #3A3A3A;
 }
