--- a/barrera-motoshop/src/Components/CardProducto/cardProducto.css
+++ b/barrera-motoshop/src/Components/CardProducto/cardProducto.css
@@ -1,6 +1,6 @@
 .cardProducto{
     width: 240px;
-    background-color: #1a1a1a;
+    background-color: #191919;
     border-radius: 10px;
     text-align: center;
     padding-bottom: 1rem;
@@ -11,7 +11,7 @@
     width: 240px;
     max-height: 240px;
     margin: auto;
-    outline: 2px solid #1a1a1a;
+    outline: 2px solid #191919;
     outline-offset: -2px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
