--- a/barrera-motoshop/src/Components/TiraMarcas/tiraMarcas.css
+++ b/barrera-motoshop/src/Components/TiraMarcas/tiraMarcas.css
@@ -1,8 +1,9 @@
 .tiraMarcasInicio{
     filter: drop-shadow(0px -10px 10px rgb(0, 0, 0,0.7));
-    padding-block: 2rem;
+    padding-block: 0.3rem;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background-color: rgb(81,146,192,1);
     border-top: 1px solid rgb(58,58,58, 0.2);
     border-bottom: 1px solid rgb(58,58,58, 0.2);
@@ -10,7 +11,7 @@
 
 .MarcaDeTira{
     opacity: 0.5;
-    width: 5%;
+    width: 6%;
     transition: all 0.3s ease;
     filter:grayscale(100%)
 }
